Pakage: calculo de orcamento

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
     --font-secundary: "Baloo  Da  2", serif;
     --font-action:"Josefin Slab", serif;
 }
+
+html, body{
+    scroll-behavior: smooth;
+}
 .hamburguer{
     /* background-color: red; */
     width: 2rem;
@@ -28,6 +32,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     cursor: pointer;
+    z-index: 160;
 }
 .show-menu .hamburguer{
     right: 16rem;
@@ -189,6 +194,7 @@ header{
     top:0;
     right: -20rem;
     transition: all 1s;
+    z-index: 150;
 }
 .show-menu .sidebar{
     right: 0;
@@ -595,4 +601,52 @@ header{
     padding: 1rem;
     cursor: pointer;
     grid-column: 2;
+}
+
+footer{
+    width: 100%;
+    height: 7rem;
+    background-color: #17181b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-content{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content p{
+    font-family: var(--font-secundary);
+    color: #a7a7a7;
+    font-size: 1.2rem;
+}
+
+.social-list a{
+    margin: 0 2rem;
+    color: #a7a7a7;
+    font-size: 1.3rem;
+}
+
+.social-list ul{
+    display: flex;
+}
+
+#link-topo{
+    position: fixed;
+    right: 3rem;
+    bottom: 3rem;
+    width: 3rem;
+    height: 3rem;
+    background: #C33764;  
+    background: -webkit-linear-gradient(to right, #1D2671, #C33764);  
+    background: linear-gradient(to right, #1D2671, #C33764); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: .3rem;
+    box-shadow: 0 0.1rem 0.6rem #00000009;
 }
